# Techhub-2025-Hackathon

altruix-be/: Cargo.toml
altruix-be/src/: init_demo.rs  main.rs
altruix-be/src/models/: cause.rs  event.rs  mod.rs  organization.rs  user.rs
altruix-be/src/routes/: events.rs  generic.rs  mod.rs  openapi.rs  organizations.rs  users.rs
altruix-fe/: .env  package-lock.json  package.json
altruix-fe/app/: app.css  root.tsx  routes.ts  sessions.server.ts
altruix-fe/app/components/: Calendar.tsx  EventCard.tsx  EventList.tsx  Login.tsx  Menu.tsx  Points.tsx  Preferences.tsx  QR.tsx  RewardCard.tsx  UserAnalytics.tsx
altruix-fe/app/components/admin/: Admin.tsx  Analytics.tsx  Calendar.tsx  EventHistory.tsx  Interests.tsx  ManagedOrgs.tsx  Rating.tsx  UserEvents.tsx
altruix-fe/app/components/events/: EventInformation.tsx  EventSponsors.tsx  OrganizationAbout.tsx  index.ts
altruix-fe/app/components/home/: Calendar.tsx  EventList.tsx
altruix-fe/app/components/ui/: input.tsx
altruix-fe/app/routes/: admin.$id.tsx  admin.tsx  event.$id.tsx  home.tsx  login.tsx  logout.tsx
altruix-fe/app/schemas/: authSchema.ts  eventsSchema.ts  orgScehma.ts  userSchema.ts
altruix-fe/app/utils/: auth.ts  checkInterests.ts  eventsUtils.ts  getCauses.ts  getOrganizations.ts
altruix-fe/app/welcome/: welcome.tsx
altruva-be/: Cargo.toml
altruva-be/src/: main.rs  tick.rs
altruva-be/src/models/: cause.rs  event.rs  user.rs
altruva-be/src/routes/: generic.rs  openapi.rs  users.rs
