[package]
name = "altruix-backend"
version = "0.1.0"
edition = "2024"
authors = ["Jason <jason@elg.gg>"]
repository = "https://github.com/Santiago868/Techhub-2025-Hackathon/tree/main/altruix-be"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
