[package]
name = "altruix-backend"
version = "0.1.0"
edition = "2024"
authors = ["Jason <jason@elg.gg>"]
repository = "https://github.com/Santiago868/Techhub-2025-Hackathon/tree/main/altruix-be"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-rapidoc = "6.0.0"
serde = "1.0.225"
dotenvy = "0.15.7"
surrealdb = "2.3.10"
surreal_socket = { git = "https://github.com/Elgenzay/surrealsocket.git" }
